@@ -1595,8 +1595,13 @@ ngx_http_upload_pass_form_field(ngx_conf_t *cf, ngx_command_t *cmd, void *conf)
 
     ngx_str_t                  *value;
 #if (NGX_PCRE)
+#if defined nginx_version && nginx_version >= 8025
+    ngx_regex_compile_t         rc;
+    u_char                      errstr[NGX_MAX_CONF_ERRSTR];
+#else
     ngx_int_t                   n;
     ngx_str_t                  err;
+#endif
 #endif
     ngx_http_upload_field_filter_t *f;
 
@@ -1616,6 +1621,22 @@ ngx_http_upload_pass_form_field(ngx_conf_t *cf, ngx_command_t *cmd, void *conf)
     }
 
 #if (NGX_PCRE)
+#if defined nginx_version && nginx_version >= 8025
+    ngx_memzero(&rc, sizeof(ngx_regex_compile_t));
+
+    rc.pattern = value[1];
+    rc.pool = cf->pool;
+    rc.err.len = NGX_MAX_CONF_ERRSTR;
+    rc.err.data = errstr;
+
+    if(ngx_regex_compile(&rc) != NGX_OK) {
+        ngx_conf_log_error(NGX_LOG_EMERG, cf, 0, "%V", &rc.err);
+        return NGX_CONF_ERROR;
+    }
+
+    f->regex = rc.regex;
+    f->ncaptures = rc.captures;
+#else
     f->regex = ngx_regex_compile(&value[1], 0, cf->pool, &err);
 
     if (f->regex == NULL) {
@@ -1633,6 +1654,7 @@ ngx_http_upload_pass_form_field(ngx_conf_t *cf, ngx_command_t *cmd, void *conf)
     }
 
     f->ncaptures = n;
+#endif
 #else
     f->text.len = value[1].len;
     f->text.data = value[1].data;
